# Process-Manager

./: .gitignore  README.md  processes.example.json  pyproject.toml
app_controller/: __main__.py  app_controller.py
app_controller/templates/: index.html
process_manager/: __main__.py  manager.py  process_model.py  server.py
process_manager/static/: main.js  styles.css
process_manager/templates/: index.html
test/: dummy_process.py  manager_test.py
